<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".SecondActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/menu" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/search" />
        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_bg"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/titel_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/New_Cases_text"
                        android:textSize="12sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_more" />

                    <TextView
                        android:id="@+id/num_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titel_text"
                        android:layout_marginTop="8dp"
                        android:text="@string/newe_cases_num"
                        android:textColor="@color/colorBase"
                        android:textSize="24sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/num2_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titel_text"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="22dp"
                        android:layout_toEndOf="@id/num_text"
                        android:text="@string/newe_cases_rat"
                        android:textColor="@color/colorBase"
                        android:textSize="10sp"
                        android:textStyle="bold"

                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titel_text"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="28dp"
                        android:layout_toEndOf="@id/num2_text"
                        android:src="@drawable/ic_increase" />

                    <TextView
                        android:id="@+id/sub_text"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/num_text"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/helth_text"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/graph_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/sub_text"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="30dp"
                        android:src="@drawable/graph" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/graph_img">

                        <LinearLayout
                            android:id="@+id/state1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/num_text"
                                android:layout_alignParentStart="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/newe_cases_rat2"
                                android:textColor="@color/colorBase"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/num_text"
                                android:layout_alignParentStart="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/newe_cases_st"
                                android:textSize="12sp" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/state2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/num_text"
                                android:layout_alignParentStart="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/newe_cases_rat3"
                                android:textColor="@color/colorBase"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/num_text"
                                android:layout_alignParentStart="true"
                                android:layout_marginTop="10dp"
                                android:text="@string/newe_cases_st2"
                                android:textSize="12sp" />


                        </LinearLayout>
                    </LinearLayout>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/map_text"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_more" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="10dp"
                        android:padding="16dp"
                        android:src="@drawable/map" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>